# PikaJong

./: .gitignore  CMakeLists.txt  Makefile  PikaJong  README.md  constant.h  definition.h  game_run.cpp  game_run.h  list_themes.txt  list_tiles.txt  main.cpp  main.h  make.bat  make.sh  menu.cpp  menu.h  textures.cpp  textures.h  tiles.cpp  tiles.h
data/: list_tiles.txt
data/config/: config.json
data/levels/: 1.txt  3.txt  4.txt  level1.json  level2.json  level3.json  level4.json  level_Creator.cpp
data/themes/: themes.json  western.json
graphic/: CMakeLists.txt  button.cpp  button.h  graphic.cpp  graphic.h  jong.cpp  jong.h  screen.cpp  screen.h  textures.cpp
levels/: 1.txt  2.txt  5.txt  level_Creator.cpp
lib/x86_64-w64-mingw32-SDL/include/SDL2/: SDL_hints.h
main/: CMakeLists.txt  CmakeLists.txt  controller.cpp  controller.h  gamecontroller.cpp  gamecontroller.h  main.cpp  main.h
sound/: CMakeLists.txt  CmakeLists.txt  chunk.cpp  chunk.h  music.cpp  music.h  sound.cpp  sound.h
utils/: CMakeLists.txt  constant.h  jsonhelper.cpp  jsonhelper.h  utils.cpp  utils.h
